Update bundled Opensearch in Datanode to 3.5.0 (#25062)
* update OpenSearch to 3.5.0

* adjust jvm.options

* set fallback macos jdk to bundled 25.0.2

* switch `search` node role to `warm`

* remove setting for jdk25

* fix gc log path

* changelog

* bump lucene to 10.3.2

* remove dependency to shaded opensearch client

* remove lucene 8 support, add upgrading.md

* remove lucene 8 support

* fix typo, add comment on role name change

* fix private access

* adjust to new lucene version

* add dependency to opensearch-core for Version compatibility checks

---------

Co-authored-by: Tomas Dvorak <tomas.dvorak@graylog.com>