@@ -1,20 +1,39 @@
-# JVM Heap Settings
-#
-# It's recommended to set both values to the same size to avoid stop-the-world
-# GC pauses during resize.
--Xms1g
--Xmx1g
+## JVM configuration
 
-# General JVM Settings
-#
-# Garbage collector
+## G1GC Configuration
 -XX:+UseG1GC
+-XX:G1ReservePercent=25
+-XX:InitiatingHeapOccupancyPercent=30
 
-# Ensure full stack traces for debugging
--XX:-OmitStackTraceInFastThrow
+## JVM temporary directory
+-Djava.io.tmpdir=${OPENSEARCH_TMPDIR}
 
-# Allow usage of experimental JVM options
--XX:+UnlockExperimentalVMOptions
+## heap dumps
 
-# Avoid endless loop with some TLSv1.3 implementations
--Djdk.tls.acknowledgeCloseNotify=true
+# generate a heap dump when an allocation from the Java heap fails
+# heap dumps are created in the working directory of the JVM
+-XX:+HeapDumpOnOutOfMemoryError
+
+# specify an alternative path for heap dumps; ensure the directory exists and
+# has sufficient space
+-XX:HeapDumpPath=data
+
+# specify an alternative path for JVM fatal error logs
+-XX:ErrorFile=/tmp/hs_err_pid%p.log
+
+# JDK 9+ GC logging
+-Xlog:gc*,gc+age=trace,safepoint:file=/tmp/gc.log:utctime,pid,tags:filecount=32,filesize=64m
+
+# JDK 20+ Incubating Vector Module for SIMD optimizations;
+# disabling may reduce performance on vector optimized lucene
+--add-modules=jdk.incubator.vector
+
+-javaagent:agent/opensearch-agent.jar
+--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+
+# For cases with high memory-mapped file counts, a lower value can improve stability and
+# prevent issues like "leaked" maps or performance degradation. A value of 1 effectively
+# disables the shared Arena pooling and uses a confined Arena for each MMapDirectory
+-Dorg.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits=1
+
+-XX:+UseCompactObjectHeaders
